# atomic-red-team

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .yamlfmt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTIONS.md  Gemfile  LICENSE.txt  README.md  T1546.015 – COM Hijacking  atomic-red-team.gemspec  atomic_red_team.rb  attack_api.rb  generate_atomic_docs.rb  pyproject.toml  single_test.md  temp.py  validate_atomics.rb  validate_atomics.sh
.circleci/: config.yml
.devcontainer/: build.ps1  devcontainer.json  setup.ps1
.github/: CODEOWNERS  dependabot.yml  issue_template.md  pull_request_template.md
Automation/: AtomicRedTeam.psd1  readme.md
Linux/: Linux.md  README.md
Mac/: README.md
T1098.002/: T1098.002.md
Tests/: WindowsDefenseEvasion.tests.ps1
Windows/: Atomic_Red_Team.json  README.md  Windows.md
atomic-red-team/: atomic_doc_template.md.erb  atomic_red_team.rb  attack_api.rb
atomic_red_team/: atomic_doc_template.md.erb  atomic_doc_template.md.j2  atomic_red_team.rb  atomic_test_template.yaml  atomics.py  attack.py  attack_api.py  attack_api.rb  common.py  doc_generator.py  docs.py  files.py  guid.py  labels.py  models.py  new_atomic.py  runner.py  sources.py  spec.yaml  templatize.py  utils.py  validate.py  validator.py
atomics/: T1003.005.yaml  T1027.011  T1204.003  art_navigator_layer.json  atomic_doc_template.md.erb  index.md  index.yaml  linux-index.md  linux-matrix.md  macos-index.md  macos-matrix.md  matrix.md  spec.yaml  t1027.013_encoded_file.yaml  t1027.013_encrypted_file.yaml  template.yaml  used_guids.txt  windows-index.md  (+1 more)
(+2155 files in other folders)
