[tool.poetry]
name = "atomic-red-team"
version = "0.1.0"
description = ""
authors = ["Maintainers <opensource@redcanary.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.3"
jsonschema = "^4.25.1"
requests = "^2.32.5"
ruamel-yaml = "^0.18.16"
pydantic = "^2.12.5"
typer = "^0.20.0"
hypothesis = "^6.148.7"
pytest = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
